tests/compError/argumentWithoutType.ucl
// compError
// error: function argument without a type
// tests/compError/argumentWithoutType.ucl:5 -> here

const test = fn(arg) {};